wacc/test/golden/syntaxErr.sequence.endSeq
# extra sequential composition 

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip end;


In test/wacc_examples/invalid/syntaxErr/sequence/endSeq.wacc (line 11, column 15):
unexpected ";"
semi-colons cannot follow the `end` of the program
> 
> begin skip end;
>               ^
